<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/grupo_hembra">
        <item
            android:id="@+id/action_ver_partos"
            android:title="@string/ver_partos"
            app:showAsAction="never"
            android:icon="@drawable/edad_icon"
            />
    </group>
    <group android:id="@+id/grupo_reprod">
        <item
            android:id="@+id/action_nueva_monta"
            android:title="@string/nueva_monta"
            app:showAsAction="never"
            android:icon="@drawable/edad_icon"
            />
    </group>
    <item
        android:id="@+id/action_editar"
        android:title="@string/action_editar"
        app:showAsAction="never"
        android:icon="@drawable/number"
         />
    <item
        android:id="@+id/action_vender"
        android:title="@string/action_vender"
        app:showAsAction="never"
        android:icon="@drawable/number"
        />
    <item
        android:id="@+id/action_eliminar"
        android:title="@string/action_eliminar"
        app:showAsAction="never"
         />
</menu>
