<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevaMontaSemental">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_nam_semental"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="30dp"
            android:hint="@string/semental"
            app:errorEnabled="true"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombre_semental"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:paddingTop="10dp"
                android:focusable="false"
                android:paddingBottom="10dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_fecha_monta"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_monta"
            app:errorEnabled="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fecha_monta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textSize="16sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:cursorVisible="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_hembra"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/hembra"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_nam_semental"
            android:layout_marginStart="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hembra_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="16sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_monto"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:hint="@string/monto"
            app:errorEnabled="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_fecha_monta"
            app:prefixText="$ "
            app:prefixTextColor="@color/colorPrimary"
            android:layout_marginEnd="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/monto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                android:paddingTop="10dp"
                android:text="@string/cero"
                android:paddingBottom="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/cliente"
            app:errorEnabled="true"
            app:helperText="@string/opcional"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:layout_constraintTop_toBottomOf="@+id/input_hembra">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombre_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="16sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_descrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notas"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            android:layout_marginTop="5dp"
            app:helperText="Notas sobre la monta (Opcional)"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_cliente"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textSize="16sp"
                android:imeOptions="actionDone"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/grupo_insemina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/input_descrip"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/natural"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monta_natural"
                android:layout_gravity="center"
                android:checked="true"
                android:layout_marginStart="20dp" />
            <RadioButton
                android:id="@+id/artificial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/artificial"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp" />
        </RadioGroup>

        <Button

            android:id="@+id/agregar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/agregar"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/grupo_insemina"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:background="@drawable/boton_redondeado"
            android:layout_marginBottom="150dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>